<resources>
    <string name="app_name">OnlineTuition</string>
    <string name="button_statistics">Statistics</string>
    <string name="button_SelectCourse">Select Course</string>
    <string name="navigate_title">Home Page</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="multiple_txt">Each Course Is RM 50.00</string>

    <string name="button_payment">Payment</string>
    <string name="box_one_payment">Payment</string>

    <string name="table_header_1">TITLE</string>
    <string name="table_header_2">AMOUNT</string>
    <string name="table_header_3">PERCENTAGE</string>
    <string name="course_title1">0 - IT</string>
    <string name="course_title2">1 - Account</string>
    <string name="course_title3">2 - Business</string>
    <string name="course_title4">3 - Electronic</string>
    <string name="course_title5">4 - Geography</string>
    <string name="course_title6">5 - Mathematics</string>
    <string name="course_title7">6 - Multimedia</string>
    <string name="course_title8">7 - Science</string>
    <string name="race_title1">0 - Chinese</string>
    <string name="race_title2">1 - Malay</string>
    <string name="race_title3">2 - Indian</string>
    <string name="race_title4">3 - International</string>
    <string name="race_title5">4 - Bangladesh</string>
    <string name="race_title6">5 - Myanmar</string>
    <string name="rating_title5">5 - ★★★★★</string>
    <string name="rating_title4">4 - ★★★★</string>
    <string name="rating_title3">3 - ★★★</string>
    <string name="rating_title2">2 - ★★</string>
    <string name="rating_title1">1 - ★</string>
    <string name="rating_title6">0 - Unrated</string>

    <string-array name="subject_item">
        <item>Mathematics </item>
        <item>Multimedia </item>
        <item>Science </item>
        <item>Geography </item>
        <item>Electronic </item>
        <item>Business </item>
        <item>Account </item>
        <item>IT </item>
    </string-array>

    <string-array name="class_teacher">
        <item>Accounting</item>
        <item>Business</item>
        <item>Multimedia</item>
        <item>Geography</item>
        <item>IT</item>
        <item>Electronic</item>
        <item>Mathematics</item>
        <item>Science</item>
    </string-array>

    <string-array name="homework_item">
        <item>Practical 1</item>
        <item>Practical 2</item>
        <item>Practical 3</item>
        <item>Tutorial 1</item>
        <item>Tutorial 2</item>
        <item>Tutorial 3</item>
        <item>Assignment</item>
    </string-array>


    <string name="confirmButton">Confirm</string>

    <string name="title_activity_payment">Payment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_paymethod">Payment Method</string>
    <string name="textview_master">Master Card</string>
    <string name="textview_card">Credit / Debit Card</string>
    <string name="img_debit_credit">Credit / Debit Card</string>
    <string name="textview_bankin">Bank  in receipt</string>
    <string name="img_file_upload">Bank in receipt</string>
    <string name="image_receipt">Bank in receipt</string>
    <string name="todo">TODO</string>
    <string name="choose_image">Choose Image</string>
    <string name="image_button">Choose Image</string>
    <string name="picture_receipt">Recipt</string>
    <string name="text_price">Total: RM 200.00</string>
    <string name="text_upload">Upload</string>

    <string name="textViewCD">Debit/Credit Card</string>
    <string name="textViewCardNumber">Card Number</string>
    <string name="textViewExpiration">Expiration</string>
    <string name="textViewName">Name</string>
    <string name="textViewCCV">CCV</string>
    <string name="StringCardNumberHint">1111 1111 1111 1111</string>
    <string name="StringExpiration">12/20</string>
    <string name="StringCCV">123</string>
    <string name="btnPay">Pay</string>

    <string name="button_classroom">Classroom</string>
    <string name="practical_1">Practical 1</string>
    <string name="add_attachment">Add attachment</string>
    <string name="button_submit">Submit</string>
    <string name="btn_rating_submit">Submit!</string>
    <string name="btn_navito_rating">Rating</string>
    <string name="textRatingTitle">Rate for this system</string>
    <string name="btn_logout">Log Out</string>
</resources>