<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".tabRating">

    <data>
        <variable
            name="RatingData"
            type="com.example.onlinetuition.RatingData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:padding="5sp">
                <TextView
                    android:id="@+id/header_1"
                    android:layout_weight="8"
                    android:paddingLeft="10sp"
                    android:text="@string/table_header_1" />
                <TextView
                    android:id="@+id/header_2"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/table_header_2" />
                <TextView
                    android:id="@+id/header_3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/table_header_3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp">

                <TextView
                    android:id="@+id/table_data_course_title1"
                    android:layout_weight="8"
                    android:paddingLeft="10sp"
                    android:text="@string/rating_title1"/>
                <TextView
                    android:id="@+id/table_data_course_amount1"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@={RatingData.amount1}"/>
                <TextView
                    android:id="@+id/table_data_course_percentage1"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@={RatingData.percentage1}"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="5sp">

                <TextView
                    android:id="@+id/table_data_course_title2"
                    android:layout_weight="8"
                    android:paddingLeft="10sp"
                    android:text="@string/rating_title2"/>
                <TextView
                    android:id="@+id/table_data_course_amount2"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@={RatingData.amount2}"/>
                <TextView
                    android:id="@+id/table_data_course_percentage2"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@={RatingData.percentage2}"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp">

                <TextView
                    android:id="@+id/table_data_course_title3"
                    android:layout_weight="8"
                    android:paddingLeft="10sp"
                    android:text="@string/rating_title3"/>
                <TextView
                    android:id="@+id/table_data_course_amount3"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@={RatingData.amount3}"/>
                <TextView
                    android:id="@+id/table_data_course_percentage3"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@={RatingData.percentage3}"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:padding="5sp">

                <TextView
                    android:id="@+id/table_data_course_title4"
                    android:layout_weight="8"
                    android:paddingLeft="10sp"
                    android:text="@string/rating_title4"/>
                <TextView
                    android:id="@+id/table_data_course_amount4"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@={RatingData.amount4}"/>
                <TextView
                    android:id="@+id/table_data_course_percentage4"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@={RatingData.percentage4}"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp">

                <TextView
                    android:id="@+id/table_data_course_title5"
                    android:layout_weight="8"
                    android:paddingLeft="10sp"
                    android:text="@string/rating_title5"/>
                <TextView
                    android:id="@+id/table_data_course_amount5"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@={RatingData.amount5}"/>
                <TextView
                    android:id="@+id/table_data_course_percentage5"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@={RatingData.percentage5}"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>
</layout>