<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#17619C"
    tools:context=".Payment">

    <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginBottom="206dp"
        android:background="#767C76" />

    <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/textView3"
        android:layout_marginBottom="-24dp"
        android:background="#767C76" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="263dp"
        android:layout_marginBottom="670dp"
        android:text="@string/box_one_payment"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="32sp" />

    <View
        android:id="@+id/View03"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginBottom="-32dp"
        android:background="#767C76" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="233dp"
        android:layout_height="31dp"
        android:layout_below="@+id/View03"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="178dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_paymethod"
        android:textAlignment="center"
        android:textColor="#3C3131"
        android:textSize="22sp" />

    <View
        android:id="@+id/View04"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginBottom="-23dp"
        android:background="#767C76" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="528dp"
        android:layout_toStartOf="@+id/buttonCard"
        android:text="@string/textview_card"
        android:textColor="#3C3131"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="520dp"
        android:layout_toStartOf="@+id/textView3"
        android:contentDescription="@string/img_debit_credit"
        app:srcCompat="@drawable/ic_credit_debit_card"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/buttonCard"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="513dp"
        android:background="@drawable/ic_baseline_chevron_right_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="39dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="448dp"
        android:layout_toStartOf="@+id/textView3"
        android:contentDescription="@string/img_debit_credit"
        app:srcCompat="@drawable/ic_picture_upload"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="161dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="443dp"
        android:layout_toStartOf="@+id/buttonBankIn"
        android:text="@string/textview_bankin"
        android:textColor="#3C3131"
        android:textSize="20sp" />

    <Button
        android:id="@+id/buttonBankIn"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="441dp"
        android:background="@drawable/ic_baseline_chevron_right_24" />


</RelativeLayout>